linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test_rules__adding_foreign_key-2.snap
---
source: linter/src/rules/constraint_missing_not_valid.rs
expression: "check_sql(ok_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [],
)
