linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test_rules__adding_foreign_key.snap
---
source: linter/src/rules/constraint_missing_not_valid.rs
expression: "check_sql(bad_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [
        RuleViolation {
            kind: ConstraintMissingNotValid,
            span: Span {
                start: 0,
                len: Some(
                    114,
                ),
            },
            messages: [
                Note(
                    "Requires a table scan to verify constraint and an ACCESS EXCLUSIVE lock which blocks reads.",
                ),
                Help(
                    "Add NOT VALID to the constraint and then VALIDATE the constraint.",
                ),
            ],
        },
        RuleViolation {
            kind: AddingForeignKeyConstraint,
            span: Span {
                start: 0,
                len: Some(
                    114,
                ),
            },
            messages: [
                Note(
                    "Requires a table scan and a SHARE ROW EXCLUSIVE lock on both tables, which blocks writes while the table is scanned.",
                ),
                Help(
                    "Add NOT VALID to the constraint and then VALIDATE the constraint.",
                ),
            ],
        },
    ],
)
