linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test_rules__ensure_ignored_when_new_table_with_assume_in_transaction.snap
---
source: linter/src/rules/constraint_missing_not_valid.rs
expression: lint_sql_already_in_transaction(sql)
---
[]
